# Easy.Linux.Prompt

./: .clangd  .gitignore  CMakeLists.txt  README.md  clean  ec-elp  main.c
POSIX/: Ansi_Sequences.h  CMakeLists.txt  POSIX.c  POSIX.h
Parse/: Argv.c  Argv.h  CMakeLists.txt
compiler.port/: Attributes.h  CMakeLists.txt  Data_Types.h
database/: CMakeLists.txt  database.c  database.h  emoji.c  emoji.h
src/: CMakeLists.txt  main.c
